--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.17.2",
     "mysql2": "^2.3.3",
     "pm2": "^5.1.2",
-    "sequelize": "^6.12.0"
+    "sequelize": "^6.12.0",
+    "slugify": "^1.6.4"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
